2008-05-08  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-cache.c:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-db.[ch]: 
	* src/trackerd/tracker-dbus-daemon.c:
	* src/trackerd/tracker-main.[ch]: 
	* src/trackerd/tracker-process-files.c: Cleaned up the Tracker
	structure by removing members which are not used. Also removed the
	structures in the tracker-main.h file which are not used.

2008-05-08  Philip Van Hoof  <pvanhoof@gnome.org>
	
	* src/trackerd/tracker-db-sqlite.c:
	* src/libtracker-db/tracker-db-interface.h:
	* src/libtracker-db/tracker-db-interface-sqlite.c:
	* src/libtracker-db/tracker-db-interface.c: Improvement for void returning
	queries

2008-05-08  Philip Van Hoof  <pvanhoof@gnome.org>
	
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-db-sqlite.h:
	* data/sqlite-stored-procs.sql:
	* data/sqlite-cache.sql:
	* data/Makefile.am:
	* data/sqlite-temp-tables.sql: Moved LiveSearches and Events to the 
	cache db

2008-05-08  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/Makefile.am:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-dbus-daemon.h:
	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-thunderbird.c:
	* src/trackerd/tracker-email.c:
	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-parser.c:
	* src/trackerd/tracker-process-files.h:
	* src/trackerd/tracker-utils.c:
	* src/trackerd/tracker-xesam.c:
	* src/trackerd/trackerd.[ch]: Renamed trackerd.[ch] to tracker-main.[ch].

2008-05-08  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-interface-sqlite.c:
	Moved all sqlite3 queries to one thread in GThreadPool, prepared the
	ground for future asynchronous calling back.

2008-05-07  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db.c
	* src/trackerd/tracker-db-sqlite.h:
	Removed DBConnection from ServiceTypeInfo struct.

2008-05-07  Ivan Frade  <ivan.frade@nokia.com>
