@@ -23,6 +23,8 @@ libtracker_common_la_SOURCES = 		\
 	tracker-language.h		\
 	tracker-log.c	 		\
 	tracker-log.h			\
+	tracker-nfs-lock.c		\
+	tracker-nfs-lock.h		\
 	tracker-os-dependant.h		\
 	tracker-type-utils.c		\
 	tracker-type-utils.h		\
