@@ -1,3 +1,12 @@
+2008-05-08  Ivan Frade  <ivan.frade@nokia.com>
+	
+	* src/libtracker-common/Makefile.am
+	* src/libtracker-common/tracker-nfs-lock.c
+	* src/libtracker-common/tracker-nfs-lock.h
+	* src/trackerd/tracker-db-sqlite.c
+	* src/trackerd/tracker-main.c:
+	Moved NFS lock code to his own module in libtracker-common.
+	
 2008-05-08  Martyn Russell  <martyn@imendio.com>
 
 	* src/trackerd/tracker-cache.c:
